--- a/index.html
+++ b/index.html
@@ -2,22 +2,63 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>42 Grid</title>
+  <title>Bootstrap Responsive Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    rel="stylesheet">
 </head>
 <body>
 
-<div class="container mt-4">
-  <div class="row">
-    <div class="col-lg-3 col-md-6 col-sm-12 border p-3">Box 1</div>
-    <div class="col-lg-3 col-md-6 col-sm-12 border p-3">Box 2</div>
-    <div class="col-lg-3 col-md-6 col-sm-12 border p-3">Box 3</div>
-    <div class="col-lg-3 col-md-6 col-sm-12 border p-3">Box 4</div>
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">MyWebsite</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Main Content -->
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-md-4 col-sm-12 mb-3">
+        <div class="p-3 bg-light border rounded">
+          <h4>Column 1</h4>
+          <p>This column stacks on small screens.</p>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-12 mb-3">
+        <div class="p-3 bg-light border rounded">
+          <h4>Column 2</h4>
+          <p>Uses Bootstrap grid system.</p>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-12 mb-3">
+        <div class="p-3 bg-light border rounded">
+          <h4>Column 3</h4>
+          <p>Responsive across devices.</p>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
+
